--- a/📌 2025-11.md
+++ b/📌 2025-11.md
@@ -1621,7 +1621,6 @@ Main Focus: CLI increase usage.​
 
 ​
 
-​
 
 Satisfaction:​
 
@@ -1709,6 +1708,164 @@ Bring
 How do I want to create usage.
 
 
+Create a Fabric CLI council of pro users
+Meets monthly to discuss
+
+
+
+
+
+top priority to enable unified copilot:
+
+- search api / filtering capability
+- OneLake APIs
+
+- mcp url without workspace for workloads: 
+- - solve to all: send involation to the workload OR understand the tool and figure out the capacity from workload
+- - solve specifically for OneLake
+
+
+MWC 
+
+
+Prepare for tomorrow's meeting with OneLake team (Ofri).
+Put in ADO.
+
+How are we progressing.
+
+
+
+
+
+
+
++ idea for vscode extension:
+schema validation button.
+
++ CLI intellisense
+
+
+
+
+
+
+
+
+
+
+----------
+
+
+20251119
+
+Feedback on MCP presentation:
+
+
+
+Who does the orchestration
+
+
+Do we want to expose the unified agent to other customers
+extenrola invocation.
+
+
+
+Orchestration of agents MCP.
+
+
+
+Where are we meeting the pro-dev.
+
+
+
+
+
+------
+
+
+
+Local MCP is for developers - need to use in IDE
+
+
+Remote MCP - integrated within an agent.
+Non-developers.
+
+
+
+CLI code generation.
+
+
+
+Local 
+
+
+
+Copilot studio integration for workload MCPas
+
+Default integrations
+
+
+
+MCPs kick off!
+
+
+---
+
+With AvivE
+
+
+CLI with local MCP to execute.
+
+CLI: how to integrate CI/CD library into the CLI.
+
+
+
+--------
+
+with AlonY
+
+Write a blog about my sample scripts.
+ 
+Why do you need the CLI.
+cp, mv does lot's of things.
+ 
+top selling points of the CLI.
+ 
+Send in Azure Data.
+ 
+ 
+Internal usage.. 
+ 
+ 
+Why use the CLI? 
+Reddit post 
+ 
+Work with the CAT team ...
+ 
+PR - 
+ 
+ 
+Discord for Fabric?
+ 
+ 
+Working with agents.
+ 
+3 surfices 
+ 
+Well document...
+ 
+ 
+1st effort: redit 
+ 
+ 
+Community councul 
+ 
+ 
+ 
+
+
+
+CAT team about Fabric Samples
 
 
 
@@ -1720,6 +1877,1366 @@ How do I want to create usage.
 
 
 
+--------
+
+
+
+
+Sharing resources from local to remote.
+
+Knowledge,
+
+Workload to give context,
+
+
+
+
+1. Ask Mahir about the resources in remote MCP.
+2. filtering
+3. OneLake MCP
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Presenter:
+Hasan Abo-Shally
+
+
+
+
+
+
+-----------------
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
+
+
+
+20251120
+
+
+
+
+
+
+Start with the unified copilot scenario, not with the efforts.
+
+
+Remote MCP: work with Developer - Jian (Jee-ahn)
+Add scenario.
+
+
+
+Ask other persona-owners what their persona needs from our MCP.
+
+
+Take Nimrod’s file (Yaron): search CI/CD MCP.
+Execution in VS code.
+Deployment story: of “contributor” role / it org - prodev / workspace admin.
+
+
+
+Interactive scenario vs automation scenario.
+Human of the loop - requirement from customers.
+
+
+
+Efforts:
+* Support
+* Platform
+* Devs
+
+
+
+
+Focus everyone in the meeting tomorrow.
+
+Talk about the scenarios and from their derive efforts.
+
+
+Binh is the persona for 
+
+
+Requiremetns from:
+1- form us (pro-dev scenarios)
+2- from additional platform teams… 
+3- platform enablement
+
+
+Tell me the problem, the scenario (?),
+
+
+
+We need to understand  what’s the story and what problem do they want to solve.
+
+
+
+My job is to udnersatnad the scenario and that all the team here understand’s the scenario
+Understand the scenario helps us priorities.. based on items usage etc..
+
+
+Need to talk with the teams/workloads..
+
+
+
+Join spec reviews of workloads PMs
+
+
+
+
+Understanding WHY I’m doing the features.
+To priorities te backlog.
+
+
+
+Understand usage?? 
+
+—> drive usage
+
+
+
+CLI scenarios on PBI
+
+
+
+
+We need to get the team excited to work on it!
+
+
+
+PBI MAU - Copilot MAU
+
+USAGE
+
+
+Roi.. bring me users of PBI desktop, or in VS code, in CLI.
+Priorities.
+
+
+
+
+
+
+
+
+Add a slide in about the story (What+Why) e.g., enable unified copilot… . + present scenarios.
+
+
+
+
+
+
+
+
+Sujata - working on the copilot
+
+
+
+
+
+Build Fabric MCPs Channel
+
+
+
+
+
+
+(( Need persona validation ))
+
+Talk to more customers on this.
+
+
+
+Story of the bigger story
+
+Take Rui’s slide (to tell the story).
+
+We want usage as well.
+
+
+
+
+
+
+First step. 
+Towards getting to the final review.. 
+
+
+Start from the scenarios and priorities.
+Efforts..
+
+
+
+
+Requirements of all efforts ( split if it’s our’s , platform, or workloads)
+
+
+
+
+Ask other team’s what’s there pro-dev scenarios
+
+
+What their pro-devs are doing?
+Or what control plan scenarios they have.
+
+
+
+We need to add our persona to the fabric personas
+
+
+לרתום את האשים ולעשות להם סדר בראש.
+לייצר בהירות
+
+
+
+בוא נעשה סדר 
+נתמקד באיזורי השקעה.
+
+שני scenarios
++ requirements
+
+
+Requirement <> efforts <> scenarios <> story
+
+Understand + Excited!
+
+
+Everyone want’s MAU!!!
+
+
+
+
+
+Ru
+
+
+
+
+
+
+
+———————————
+
+
+Call with Rui
+
+MCP tool to generate and execute CLI scripts. Azure MCP they have generate Azure CLI commands. 
+ 
+CLI gives a lot of things for free, it's easier to teach an agent.
+ 
+John Volder.
+ 
+ 
+This is how you use the CLI. 
+And it can try diffirent approach on errors.
+ 
+ 
+Execution
+ 
+ 
+They can expose the commands of thier own.
+ 
+Users can get the CLI script.
+ 
+Jamespath and get.
+ 
+CLI already simplifies UX.
+ 
+ 
+ 
+ 
+Add to the local MCP
+ 
+ 
+ 
+Was surprised to see we generate python scripts.. why not genetate CLI?! CLI instead on python.
+ 
+CLI much more consistent. 
+ 
+Promote the CLI via the local MCP.
+ 
+ 
+ 
+ 
+CLI Usage:
+* ones who jump
+* ones who'll be be guided into it
+ 
+CLI commands is human readible.
+ 
+ 
+Easy to learn about the CLI.
+ 
+ 
+Maybe people didn't find the scenario yet...
+ 
+ 
+It grows slow.. we need the community to jump on it.
+ 
+ 
+* Work with Kurt.
+* Markdown skill for the CLI.
+* Write a blog about CLI+AI+
+ 
+ 
+Tool to generate CLI scripts!
+ 
+ 
+Creator agent.. 
+ 
+ 
+They are creating a new spec.
+ 
+ 
+ 
+There are two specs:
+ 
+ 
+Spec - creator agent.
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ ——
+
+
+
+Filtering by name:
+
+
+Filters: jamespath filter
+Exact name,
+Similarities
+
+
+Agent translates to JAMESPath.
+
+
+
+ 
+ 
+ 
+
+
+
+CLI in NB
+CI/CD lib in CLI (Deploy command)
+ 
+CLI in the web
+ 
+PBI commands/scenarios
+- Check most used APIs in PBI
+- Natural languae to DAX (check)
+- 
+
+
+
+
+ 
+ 
+ 
+Who's using the CLI today.
+ 
+Why pro-devs are in the platform today?
+ 
+ 
+Pro-devs working locally with the CLI.
+ 
+Ask current CLI users
+What would they do with a CLI in the web.
+ 
+There is ressearch work with Avishag on defining the pro developers.
+ 
+ 
+See the commands running in the background.. (the CLI commands).. 
+ 
+ 
+Intreviews with customers.
+Prodevs
+citizen devs
+ 
+ 
+Installation?
+ 
+ 
+Rivka: can you prepare a mock?
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+  
+ 
+User panel
+ 
+Talk to CAT team
+TED for example.
+ 
+Bookings link.
+ 
+ 
+Avishag builds a short protocol.
+Screener/filter for customers
+Avishag works with Fernando to open a research
+Booking link
+ 
+ 
+
+ 
+ 
+
+
+
+
+Call with Rui 20251120
+ 
+Spec template:
+Hero scenarios --> requirements
+ 
+We need to have resources.
+ 
+OneLake MCP in the next few weeks.
+ 
+Demo at FabCon - PublicPreview at Build.
+ 
+ 
+MCP for the CLI.
+ 
+ 
+Cost(?)
+ 
+ 
+PBI 
+ 
+ 
+Can remote online agents do file download/editing... 
+ 
+ 
+Will we blow up the context..
+ 
+How agents work with files/etc...
+ 
+ 
+Maybe somtimes we need to fix the APIs. (get partial definition)
+ 
+ 
+ 
+Anthropic article around writing and executing code.. 
+ 
+Spec - Fabric MCP Tools for Creator Agent.docx
+ 
+ 
+Code execution with MCP: building more efficient AI agents \ Anthropic
+ 
+Code Mode: the better way to use MCP
+ 
+ 
+ 
+MCP to execute code..
+(see links above)
+ 
+ 
+ 
+Ask Ran about API change (defniitionsd)
+ 
+ 
+ 
+regex search.
+ 
+MCP to generate code..
+ 
+ 
+sequential work limitations...
+ 
+ 
+CLI method of unifiying definitions, to filter...
+ 
+ 
+MCP to run the CLI.
+ 
+ 
+Everything I have in the hero scenario - if you give me the CLI then it's a checkbox.
+ 
+ 
+ 
+What if, the MCP generates notebook code with the CLI and run it.
+ 
+ 
+Another advantage: code.
+ 
+ 
+ 
+People can review the code..
+ 
+ 
+Can you run a notebook that is not inside a workspace...
+ 
+ 
+Creation of worskapces
+ 
+etc...
+ 
+ 
+ 
+CLI in the web as an enabler to the Unified Copilot.
+ 
+ 
+CLI MCP server (?)
+ 
+ 
+Run a notebook without an item.
+ 
+ 
+Determinizm.
+and cost: 
+ 
+ 
+temporary notebook or shared spark etc...
+ 
+ 
+ 
+use: my-workspace.
+ 
+ 
+ 
+
+ 
+ 
+
+
+
+
+
+---
+
+
+
+
+CLI in local MCP:
+
+CLI with local MCP.
+
+CLI can run MCP server (?)
+
+CLI into the MCP.
+
+
+
+Code generation: can generate scripts no matter in which language (CLI/Py).
+
+
+
+Write CLI scripts
+Execute CLI command
+
+
+
+Installation barrier.
+
+
+
+Write a short spec.
+
+
+
+CLI command to run the MCP
+
+
+
+
+Fab MCP start
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Aviat questions
+
+1. what do you mean by: Same query works consistently across all output formats - we  want to support filtering the output format obj?
+2. what is global -q ? "Command-specific -q takes precedence over global -q"
+3. Performance - we are using Jmespath so I don't have control on how they filter the data?
+
+
+
+one more Q - what we decided regarding -l flag? -q will always  override it? 
+meaning if we get -q we always run the second API call 
+-q is like user write -l with filter
+
+
+
+Global vs command specific
+fab ls -l -q  vs  fab ls -q
+
+
+
+
+
+
+
+
+
+
+
+# Review with Aviv
+
+Support unified copilot
+
+Control-plane (in the public APIs) vs all te public APIs 
+
+extensibiltiy: tool conflicting (git-connected workspace creation)
+
+
+
+
+
+Story in fabcon (blog)
+—> requirements
+—> spec
+—> priorities backlog
+—> Plan (Engineering)
+
+Negotiate
+
+
+
+
+Requirements in the spec > processes (work with engineering, they lead it)
+
+
+What will enable the workloads to work (workload enablers)
+What’s our role in the process (review etc..)
+
+Does the contribution process need to be in the spep
+
+Convert requirements to “as a user I can…”
+
+
+
+
+User stories: a developer gets into vscode and connects to mcp via vscode…
+What the users does in the flow…
+
+
+How many users are building agents in Copilot studio 
+
+(Think of the demo)
+
+Then it’s clear the connection to the requirements…
+
+
+
+
+
+1. User (pro-dev) —> Action/flow —> requirements
+2. Workload enablers. Unified Copilot is a customer (currently developed by PBI — workload)
+3. Platform (?) with the Herzliya team. Admin API. (Separate MCP)
+4. 
+
+
+
+
+Platform
+
+
+Requirement: all what I can do with the API I want to be able to do with agent.
+
+
+Why do we need 
+
+
+
+
+We want to be reviewers to the separate MCP (we’re the owners — similar to the APIs story).
+
+
+
+
+In Spec:
+- Problem statement 
+- Business justification (value…)
+- Scenarios - priority - user/persona - tool (vscode, copilot…)
+    - Fabric copilot (we’re enablers)
+    - Workload (in wiki?)
+    - VScode (we’re owners of the persona)
+    - 
+
+Platform.. (auth, datastreaming)
+
+Workload enablement (tools of PowerBI)
+Workloads who are building their own agents and want 
+
+
+
+2 specs: Fabric Hosted MCP vs Fabric library to build you MCP in Fabric
+
+
+
+
+
+Look at CI/CD what they did.
+
+
+
+
+Interactive vs autonomous in hosted map
+
+
+
+Complex scenarios
+
+
+
+Control plane MCP instead of hosted MCP.
+
+
+Data agents (ask Marcus about multiple MCP servers scenario) 
+
+
+
+
+
+
+
+Local MCP.
+
+
+
+Redit: agentic development in Fabric
+
+
+
+
+Reply here:https://www.reddit.com/r/MicrosoftFabric/comments/1odxfk9/should_i_use_mcp_when_developing_fabric_and_power/
+
+
+——
+
+
+
+Show plan how are we going to grow usage:
+* PM work (show what we’re doing)
+
+
+Can I show something at 3pm 
+
+
+
+
+
+
+
+
+
+
+
+---------------------------------------------------------------------------------------------
+
+
+
+
+
+
+Shira is joining our team
+
+
+
+
+Azure CLI auth.
+
+
+
+Ownership of the CICD library.
+
+
+
+Backlog items for integtaion of the library into the CLI.
+
+Git commands (?)
+
+
+Meeting with Eva and Nimrod to revuew the gaps
+CICD Gaps
+Add Shira
+
+
+Learning sessions
+
+
+Roadmap items on CICD library
+
+delay no gaps
+
+
+
+
+
+----
+
+
+
+# FabCLI PowerBI — meeting with Rui Romano
+
+- Rebind command
+- 
+
+Fabric get does some of the replacement (bypath --> byconnection)
+
+check rui romano github for more scenarios
+
+
+
+powerbi commands vs 
+
+
+SemanticModelID vs ws1/sm1.semanticmodel
+
+
+
+
+Want any item to be deployed in one line of CLI.
+
+
+
+PBI report always connected
+
+
+rebind - we need to support v2
+
+
+
+
+
+Query command
+
+
+do we support PBI commands?
+
+
+Review the PowerBI APIs.
+
+
+
+
+
+(2) Semantic models parameters
+
+
+
+
+
+
+PowerPI developer using 
+
+
+
+
+remove a visual/table before deployment
+
+
+start with genetic commands 
+
+most of pbi developers/users should be familiar with the definition.
+we can assume that
+need a flexible way for them to make chanes (JMSEPATH is good)
+
+
+
+Deploy a report and make sure the selected page is specific page.
+
+make a page of example converting the generic apporach to more foamous use-cases
+
+
+
+sementaic model definition is not JSON, it's tmdl. We might need to convert?
+regex support? 
+
+
+
+ generic set command
+ it should also work with the 
+ "predeplyment script" -- preset 
+ adhoc change just for the improt
+ - set command as a paramater of the import
+
+
+
+
+
+
+
+
+
+-----
+
+
+3 semesters vision deck — until end of January.
+
+
+
+We own the epics and features.
+
+
+PM touch features and epics,
+Engineers to,
+
+
+
+We need to make the change.
+
+
+Define the same structure for everyone.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+https://hits.microsoft.com/my/preferences
+
+
+
+but something simple that would help is doing the same as pip install, when you call the CLI the first time in a session report back to the user there is a new version.
+
+
+
+
+
+
+
+
+
+
+///
+
+
+# With Kurt:
+- building an agent-first CLI
+-
+
+
+
+querying semantic model
+refreshing semantic model
+use enhance[]
+PBI API
+
+
+
+
+
+
+
+download pbix,pbip,raw-def
+
+
+CLI is only working with Fabric.
+
+
+Devs spend more times in their local environmen.
+
+
+
+
+
+Can fit in the CLI itself.
+
+
+
+
+
+Hundreds of hours spent in developing this.
+
+
+
+"async agents"
+
+
+
+
+sandbox command
+hackmode
+
+give distcuctive env.
+
+
+
+markdowns in the repo.
+
+
+
+---
+
+
+# MCP review
+
+Error handling
+
+
+
+Fabric CRUD MCP (?)
+
+
+
+
+
+---
+
+
+# Onelake meeting:
+
+
+
+OneLake:
+* Diffirent Endpoint
+* 
+
+
+Agents framework: 
+
+Does the creator agent 
+
+Have a seperate meeting 
+
+
+
+Are we providing a hosting to the MCP.
+
+
+
+Extension Workload MCPs
+
+
+
+We need to provide a wiki how to start your MCP
+(create a copilot to help)
+
+
+
+from Ofri:
+* As a follow up - Could we get a plan on - 
+The proposed split of tools between Remote Fabric MCP and the Remote OneLake MCP
+* When will the Remote OneLake MCP be available for integration
+
+
+
+
+timeline and plan.
+
+
+
+
+
+
+
+---
+
+
+Local MCP
+
+
+Readme.md file --> Sunitha
+
+
+Contribution (internal vs extrnal)
+
+
+
+
+
+
+
+Do we need to review the tools
+
+
+
+
+
+Open md file for MCP startus + share with Mahir.
+
+
+MCP Teanms Group?
+
+
+
+
+
+
+
+MWC — backend of all workloads
+Shared — 
+
+
+
+MCP url: per capacity
+
+
+
+
+
+
+
+
+Implement their own MCP
+
+
+
+mcp.fabric.com/v1/mcp/
+
+
+
+SparkDiagnostics
+
+
+
+
+Context aware MCP for the notebook?
+
+
+love the proress!
+
+
+
+
+Wiki:
+
+
+---
+
+
+
+
+
+Our value to workloads:
+- routing — must use the api.fabric.com/
+- auth (in vscode for example)
+- telemetry
+- guidlines
+- integrations
+
+
+
+Midterm:
+
+
+
+
+
+Wiki - write it!!
+
+
+
+Priority - 
+
+
+
+
+
+
+----
+
+CLI v2.
+
+
+
+
+Add question to Kim
+
+
+
+
+
+try to find relevant conferences to go to
+
+
+
+------------------------------------------------------
+
+
+we need to take ownership on the mcp netowrk 
+
+
+infra agent (?)
+
+
+
+20251202 - creator copilot (latest)
+
+Rui — 
+
+
+
+
+use the Service + use the CLI.
+
+
+
+Looking for users who are using the CLI and also working in the Azure portal.
+
+
+
+
+----
+
+
+
+
+
+
+
+
+
+Rivka: to create a mockup.
+
+
+
+what will you it
+
+
+
+
+
+Hypothesis: 
+
+- 
+
+
+
+
+
+Bring insights/validations etc...
+
+
+
+
+
+First , Ad hoc scripts 
+
+
+
+Copilot --> 
+
+
+
+Write my story.. show my vision.
+
+
+
+
+
+Vision --> hypothesis --> collect feedback
+
+
+
+CLI script.
+
+
+
+---
+
+
+MCP+CLI.
+
+
+30 minutes — meeting,
+
+
+Don't stay in think level.. need evidence!!!
+
+
+CTO 
+
+
+Doc --> 30 minutes next week.
+
+
+
+Research item script.
+
+
+Blueprint to work with the CLI
+Execute
+
+
+
+
+
+-----
+
+
+
+
+
+
+
+
+
+
+
+
+Talk to Kim,
+
+Alon will also talk to her.
+
+
+
+
+
+
+
+CLI in the web validation (Sun)
+Partners voice presentation and meeting (Tue)
+Specs (remote, local) (Tue)
+
+Wiki for MCPs platform --> send to Mahir to review
+
+CLI in the web vision
+MCP to execute CLI -> meeting to discuss
+
+Saturday lecture
 
 
 
